--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
   <!-- Contact Section -->
   <section id="contact">
     <h2>Contact Me</h2>
-    <p>Email: <a href="mailto:yourname@gmail.com">yourname@gmail.com</a></p>
-    <p>GitHub: <a href="https://github.com/yourusername" target="_blank">My GitHub</a></p>
+    <p>Email: <a href="mailto:yourname@gmail.com">hp897791@gmail.com</a></p>
+    <p>GitHub: <a href="https://github.com/yourusername" target="_blank">HARSHDEEP PATIL</a></p>
   </section>
 
   <footer>
@@ -46,3 +46,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
